--- a/app/templates/visitor/visitor_find_crop.html
+++ b/app/templates/visitor/visitor_find_crop.html
@@ -46,7 +46,7 @@
         
     </form>
     <div class="row">
-        <h2>{{result}}</h2>
+        <h2 style="text-align: center;">{{result}}</h2>
     </div>
 </div>
 
